--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "react-date-picker",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-next-date-picker",
+  "version": "2.0.0",
+  "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
-    "next:build": "next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build": "rm -rf dist && tsc -p tsconfig.build.json",
-    "prepublishOnly": "npm run build"
+    "version": "npm run build && git add -A dist"
   },
   "peerDependencies": {
     "react": ">=18",
@@ -17,9 +16,11 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@wojtekmaj/date-utils": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "get-user-locale": "^3.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "react": "^19.0.0",
