--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "react-next-date-picker",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "private": false,
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/cjs/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "style": "./src/style.css",
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "peerDependencies": {
     "react": ">=18",
@@ -15,6 +20,7 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "@wojtekmaj/date-utils": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,7 +31,8 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.6.5",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "vite": "^6.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -38,6 +45,23 @@
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "tsup": "^8.4.0",
+    "typescript": "^5",
+    "vitest": "^3.0.8"
+  },
+  "keywords": [
+    "calendar",
+    "date",
+    "date-picker",
+    "month-picker",
+    "react"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
+  "files": [
+    "dist",
+    "src"
+  ]
 }
